--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
             </div>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="https://paulinnncs.github.io/calculadora/script.js"></script>
 </body>
 </html>
