--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="clear-number">
                 <div class="clear">
                     <div class="button c"><button onclick="pressButton('C')" class="text">C</button></div>
-                    <div class="button"><button onclick="pressButton('apagar')" class="text"><img src="/img/delete_icon_128881.svg" alt=""></button></div>
+                    <div class="button"><button onclick="pressButton('apagar')" class="text"><img src="https://github.com/PaulinnnCS/calculadora/blob/master/img/delete_icon_128881.svg" alt=""></button></div>
                 </div>
                 <div class="numbers">
                     <div class="button"><button onclick="pressButton('9')" class="text">9</button></div>
